test/error/syntax/missing_lparen_func.kat
func main argc: int, argv: str) => int {
  let i: int = 1;
  let j: int = 2;
}
